Adjusted font size in buttons to prevent overflow in most cases

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -27,6 +27,7 @@ main {
 .take-quiz-button {
     background-color: darkblue;
     color:white;
+    font-size: 1.5em;
 }
 
 .take-quiz-button:hover {
